[package]
authors = ["Rafael Koch <rafael.koch@gmx.net>"]
name = "hcsr04_async"
version = "0.4.0"
edition = "2021"
license = "MIT"
description = "A no-std driver for the HC-SR04 ultrasonic sensor using async"
categories = ["embedded", "no-std", "hardware-support"]
keywords = ["async", "embedded-hal", "hc-sr04", "ultrasonic", "distance"]
readme = "README.md"
repository = "https://github.com/1-rafael-1/hcsr04_async"
documentation = "https://docs.rs/hcsr04_async"

[features]
default = ["blocking_trigger"]
blocking_trigger = [
] # blocking trigger pulse, recommended for most use cases. Much more accurate trigger pulse length.

[dependencies]
embedded-hal-async = "^1.0.0"
embedded-hal = "^1.0.0"
defmt = "^0.3.8"
libm = "^0.2.1"
futures = { version = "0.3.31", default-features = false, features = [
    "async-await",
] }

[dev-dependencies]
embedded-hal-async = "^1.0.0"
embedded-hal = "^1.0.0"
defmt = "^0.3.8"
defmt-rtt = "^0.4.1"
critical-section = "^1.1.3"
embassy-time = "^0.4.0"
trybuild = "1.0"

# cargo build/run
[profile.dev]
codegen-units = 1
debug = 2
debug-assertions = true
incremental = false
opt-level = 1
overflow-checks = true
lto = "off"

# cargo build/run --release
[profile.release]
codegen-units = 1
debug = 2
debug-assertions = false
incremental = false
lto = 'fat'
opt-level = 's'
overflow-checks = false

# do not optimize proc-macro crates = faster builds from scratch
[profile.dev.build-override]
codegen-units = 8
debug = false
debug-assertions = false
opt-level = 0
overflow-checks = false

[profile.release.build-override]
codegen-units = 8
debug = false
debug-assertions = false
opt-level = 0
overflow-checks = false

# cargo test
[profile.test]
codegen-units = 1
debug = 2
debug-assertions = true
incremental = false
opt-level = 's'
overflow-checks = true

# cargo test --release
[profile.bench]
codegen-units = 1
debug = 2
debug-assertions = false
incremental = false
lto = 'fat'
opt-level = 's'
